Change package name from sample to elec.

--- a/src/elec/electUi.fxml
+++ b/src/elec/electUi.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<GridPane hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="elec.Controller">
    <children>
    
        <Button onAction="#energyClick" style="-fx-background-color: transparent;">
