--- a/src/elec/electUi.fxml
+++ b/src/elec/electUi.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
@@ -20,9 +24,106 @@
                </image>
             </ImageView>
          </graphic></Button>
-       <Label fx:id="energyMeter" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="370.0" text=" " GridPane.rowIndex="1" />
+       <Label fx:id="energyMeter" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="370.0" text="0 mAH" GridPane.rowIndex="1" />
+      <GridPane alignment="CENTER" GridPane.columnIndex="1">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="111.0" text="Button" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <Label alignment="TOP_CENTER" ellipsisString="Shop" prefHeight="75.0" prefWidth="100.0" text="Shop" textAlignment="CENTER" GridPane.columnIndex="8" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+               <font>
+                  <Font size="44.0" />
+               </font>
+            </Label>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Button" GridPane.columnIndex="9" GridPane.rowIndex="1" />
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="164.0" text="Button" GridPane.columnIndex="9" GridPane.rowSpan="2" GridPane.valignment="CENTER" />
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="136.0" text="Button" GridPane.columnIndex="7" GridPane.rowSpan="2" GridPane.valignment="CENTER" />
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Button" GridPane.columnIndex="8" GridPane.rowIndex="1" />
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Button" GridPane.columnIndex="8" GridPane.rowSpan="2" GridPane.valignment="CENTER" />
+            <LineChart prefHeight="166.0" prefWidth="300.0" title="Electricity Output" GridPane.columnIndex="7" GridPane.columnSpan="3" GridPane.hgrow="NEVER" GridPane.rowIndex="3" GridPane.rowSpan="2147483647" GridPane.vgrow="NEVER">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis prefHeight="286.0" prefWidth="28.0" side="LEFT" />
+              </yAxis>
+            </LineChart>
+            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnSpan="2" />
+            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="3" GridPane.columnSpan="2" />
+            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="100.0" text="Button" GridPane.columnIndex="7" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Button" GridPane.columnIndex="8" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Button" GridPane.columnIndex="9" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Button" GridPane.columnIndex="7" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.valignment="CENTER" />
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Button" GridPane.columnIndex="8" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.valignment="CENTER" />
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="Button" GridPane.columnIndex="9" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.valignment="CENTER" />
+            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="100.0" text="Button" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets bottom="45.0" />
+               </GridPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="45.0" />
+               </GridPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="45.0" />
+               </GridPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets bottom="45.0" />
+               </GridPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="3">
+               <GridPane.margin>
+                  <Insets bottom="45.0" />
+               </GridPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="3" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="45.0" />
+               </GridPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="3" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="45.0" />
+               </GridPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="3" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets bottom="45.0" />
+               </GridPane.margin>
+            </Button>
+         </children>
+      </GridPane>
    </children>
    <columnConstraints>
+      <ColumnConstraints />
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
