--- a/src/elec/electUi.fxml
+++ b/src/elec/electUi.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.chart.*?>
@@ -31,6 +32,46 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
+            <Label fx:id="oneOneLab" prefWidth="90.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <padding>
+                  <Insets bottom="90.0" />
+               </padding>
+            </Label>
+            <Label fx:id="oneFourLab" prefWidth="90.0" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="1">
+               <padding>
+                  <Insets bottom="90.0" />
+               </padding>
+            </Label>
+            <Label fx:id="twoOneLab" prefWidth="90.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <padding>
+                  <Insets bottom="90.0" />
+               </padding>
+            </Label>
+            <Label fx:id="zeroFourLab" prefWidth="90.0" text="Label" GridPane.columnIndex="4">
+               <padding>
+                  <Insets bottom="90.0" />
+               </padding>
+            </Label>
+            <Label fx:id="threeOneLab" prefWidth="90.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <padding>
+                  <Insets bottom="90.0" />
+               </padding>
+            </Label>
+            <Label fx:id="threeFourLab" prefWidth="90.0" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="3">
+               <padding>
+                  <Insets bottom="90.0" />
+               </padding>
+            </Label>
+            <Label fx:id="twoFourLab" prefWidth="90.0" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="2">
+               <padding>
+                  <Insets bottom="90.0" />
+               </padding>
+            </Label>
+            <Label fx:id="zeroOneLab" prefHeight="107.0" prefWidth="96.0" text="0, 1 Name" GridPane.columnIndex="1">
+               <padding>
+                  <Insets bottom="90.0" />
+               </padding>
+            </Label>
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="111.0" text="Button" GridPane.columnIndex="7" GridPane.rowIndex="1" />
             <Label alignment="TOP_CENTER" ellipsisString="Shop" prefHeight="75.0" prefWidth="100.0" text="Shop" textAlignment="CENTER" GridPane.columnIndex="8" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
@@ -50,61 +91,61 @@
                 <NumberAxis prefHeight="286.0" prefWidth="28.0" side="LEFT" />
               </yAxis>
             </LineChart>
-            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" />
-            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="4" GridPane.columnSpan="2" />
-            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-            <ProgressBar prefWidth="200.0" progress="0.0" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <ProgressBar fx:id="zeroOneProg" prefWidth="200.0" progress="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" />
+            <ProgressBar fx:id="oneOneProg" prefWidth="200.0" progress="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+            <ProgressBar fx:id="twoOneProg" prefWidth="200.0" progress="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <ProgressBar fx:id="threeOneProg" prefWidth="200.0" progress="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <ProgressBar fx:id="zeroFourProg" prefWidth="200.0" progress="0.0" GridPane.columnIndex="4" GridPane.columnSpan="2" />
+            <ProgressBar fx:id="oneFourProg" prefWidth="200.0" progress="0.0" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+            <ProgressBar fx:id="twoFourProg" prefWidth="200.0" progress="0.0" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <ProgressBar fx:id="threeFourProg" prefWidth="200.0" progress="0.0" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.rowIndex="3" />
             <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="100.0" text="Button" GridPane.columnIndex="7" GridPane.rowIndex="2" />
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Button" GridPane.columnIndex="8" GridPane.rowIndex="2" />
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Button" GridPane.columnIndex="9" GridPane.rowIndex="2" />
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Button" GridPane.columnIndex="7" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.valignment="CENTER" />
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Button" GridPane.columnIndex="8" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.valignment="CENTER" />
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="Button" GridPane.columnIndex="9" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.valignment="CENTER" />
-            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="100.0" text="Button" GridPane.columnIndex="1" GridPane.valignment="CENTER">
+            <Button fx:id="zeroOneBut" mnemonicParsing="false" onAction="#zeroOneClick" prefHeight="0.0" prefWidth="100.0" text="Buy" GridPane.columnIndex="1" GridPane.valignment="CENTER">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button fx:id="oneOneBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Button fx:id="twoOneBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Button fx:id="threeOneBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="4">
+            <Button fx:id="zeroFourBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="4">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="4" GridPane.rowIndex="1">
+            <Button fx:id="oneFourBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="4" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="4" GridPane.rowIndex="2">
+            <Button fx:id="twoFourBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="4" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Button" GridPane.columnIndex="4" GridPane.rowIndex="3">
+            <Button fx:id="threeFourBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="4" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+            <Button fx:id="zeroOneUpg" mnemonicParsing="false" onAction="#zeroOneClick" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
                <GridPane.margin>
                   <Insets bottom="57.0" />
                </GridPane.margin>
@@ -116,7 +157,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <Button fx:id="oneOneUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -128,7 +169,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <Button fx:id="twoOneUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -140,7 +181,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+            <Button fx:id="threeOneUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -152,7 +193,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="5" GridPane.halignment="RIGHT">
+            <Button fx:id="zeroFourUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="5" GridPane.halignment="RIGHT">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -164,7 +205,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="5" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <Button fx:id="oneFourUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="5" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -176,7 +217,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="5" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <Button fx:id="twoFourUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="5" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -188,7 +229,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="5" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+            <Button fx:id="threeFourUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="5" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -200,6 +241,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
+            <Label text="1:00" GridPane.columnIndex="1" />
          </children>
       </GridPane>
    
