--- a/src/elec/electUi.fxml
+++ b/src/elec/electUi.fxml
@@ -297,7 +297,22 @@
                   <Insets bottom="125.0" />
                </padding>
             </Label>
+            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" GridPane.columnIndex="10" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+               <graphic>
+                  <ImageView fitHeight="51.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/helpIcon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <GridPane.margin>
+                  <Insets right="6.0" top="3.0" />
+               </GridPane.margin>
+            </Button>
          </children>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
       </GridPane>
    
        <Button onAction="#energyClick" prefHeight="677.0" prefWidth="0.0" style="-fx-background-color: transparent;">
