--- a/src/elec/electUi.fxml
+++ b/src/elec/electUi.fxml
@@ -33,6 +33,11 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="142.0" prefWidth="116.0" text="Label" GridPane.columnIndex="9" GridPane.rowIndex="2">
+               <padding>
+                  <Insets bottom="125.0" />
+               </padding>
+            </Label>
             <Label text="machine" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <padding>
                   <Insets bottom="90.0" />
@@ -180,37 +185,37 @@
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="oneOneBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.rowIndex="1">
+            <Button fx:id="oneOneBut" mnemonicParsing="false" onAction="#oneOneClick" prefWidth="100.0" text="Buy" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="twoOneBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.rowIndex="2">
+            <Button fx:id="twoOneBut" mnemonicParsing="false" onAction="#twoOneClick" prefWidth="100.0" text="Buy" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="threeOneBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.rowIndex="3">
+            <Button fx:id="threeOneBut" mnemonicParsing="false" onAction="#threeOneClick" prefWidth="100.0" text="Buy" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="zeroFourBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="3">
+            <Button fx:id="zeroFourBut" mnemonicParsing="false" onAction="#zeroFourClick" prefWidth="100.0" text="Buy" GridPane.columnIndex="3">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="oneFourBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <Button fx:id="oneFourBut" mnemonicParsing="false" onAction="#oneFourClick" prefWidth="100.0" text="Buy" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="twoFourBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="3" GridPane.rowIndex="2">
+            <Button fx:id="twoFourBut" mnemonicParsing="false" onAction="#twoFourClick" prefWidth="100.0" text="Buy" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="threeFourBut" mnemonicParsing="false" prefWidth="100.0" text="Buy" GridPane.columnIndex="3" GridPane.rowIndex="3">
+            <Button fx:id="threeFourBut" mnemonicParsing="false" onAction="#threeFourClick" prefWidth="100.0" text="Buy" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
@@ -227,7 +232,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="oneOneUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <Button fx:id="oneOneUpg" mnemonicParsing="false" onAction="#oneOneClick" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -239,7 +244,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="twoOneUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <Button fx:id="twoOneUpg" mnemonicParsing="false" onAction="#twoOneClick" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -251,7 +256,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="threeOneUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+            <Button fx:id="threeOneUpg" mnemonicParsing="false" onAction="#threeOneClick" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -263,7 +268,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="zeroFourUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="4" GridPane.halignment="RIGHT">
+            <Button fx:id="zeroFourUpg" mnemonicParsing="false" onAction="#zeroFourClick" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="4" GridPane.halignment="RIGHT">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -275,7 +280,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="oneFourUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <Button fx:id="oneFourUpg" mnemonicParsing="false" onAction="#oneFourClick" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -287,7 +292,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="twoFourUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <Button fx:id="twoFourUpg" mnemonicParsing="false" onAction="#twoFourClick" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -299,7 +304,7 @@
                   <Insets bottom="57.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="threeFourUpg" mnemonicParsing="false" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+            <Button fx:id="threeFourUpg" mnemonicParsing="false" onAction="#threeFourClick" prefHeight="0.0" prefWidth="27.0" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -320,11 +325,6 @@
                </GridPane.margin>
                <padding>
                   <Insets left="30.0" />
-               </padding>
-            </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="142.0" prefWidth="116.0" text="Label" GridPane.columnIndex="9" GridPane.rowIndex="2">
-               <padding>
-                  <Insets bottom="125.0" />
                </padding>
             </Label>
             <Button fx:id="helpBtn" alignment="CENTER" mnemonicParsing="false" onAction="#showHelpScreen" prefHeight="0.0" prefWidth="0.0" GridPane.columnIndex="11" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
